--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
         </header>
 
         <!--Formulario de consulta y  descripción breve del programa-->
-        <section id="principal" class="consulta">
+        <section  class="consulta">
             <div class="contenedor-formulario">
-                <div class="formulario">
-                    <form method="post">
+                <div  class="formulario">
+                    <form  method="post">
                         <h3>Consulta tu estado del</h3>
                         <h3>Ingreso</h3>
                         <h3>Solidario </h3>
@@ -73,7 +73,7 @@
                     </form>
                 </div>
 
-                <div class="descripcion ">
+                <div id="principal" class="descripcion ">
                     <h2>Ingreso Solidario</h2>
                     <p>Debido a la situación generada por el COVID-19, el gobierno nacional aportará a las familias más afectadas y que no pertenezcan a algún programa social, un subcidio por $160.000</p>
                     <div class="botton-superior">
